--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "GPL-2.0-or-later"
     ],
     "require": {
-        "typo3/cms-core": "^12.0"
+        "typo3/cms-core": "^12.0",
+		"b13/make": "^0.1.6"
     },
     "autoload": {
         "psr-4": {
