--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     ],
     "require": {
         "typo3/cms-core": "^12.0",
-		"b13/make": "^0.1.6"
+		"b13/make": "^0.1.6",
+        "guzzlehttp/guzzle": "^7.8"
     },
     "autoload": {
         "psr-4": {
