--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,22 @@
         "guzzlehttp/guzzle": "^7.8",
         "twig/twig": "^3.0"
     },
+	"require-dev": {
+		"ergebnis/composer-normalize": "~2.42.0",
+		"friendsofphp/php-cs-fixer": "^3.52",
+		"phpstan/phpstan": "^1.10",
+		"typo3/testing-framework": "*"
+	},
+	"config": {
+		"allow-plugins": {
+			"ergebnis/composer-normalize": true,
+			"typo3/class-alias-loader": true,
+			"typo3/cms-composer-installers": true
+		},
+		"bin-dir": ".Build/bin",
+		"sort-packages": true,
+		"vendor-dir": ".Build/vendor"
+	},
     "autoload": {
         "psr-4": {
             "T3docs\\ProjectInfo\\": "Classes/"
@@ -18,7 +34,8 @@
     },
     "extra": {
         "typo3/cms": {
-            "extension-key": "project_info"
+            "extension-key": "project_info",
+			"web-dir": ".Build/web"
         }
     }
 }
